# SplitAO3D

./: CMakeLists.txt  CONTRIBUTING.md  README.md
lz4_win64_v1_9_4/static/: liblz4.lib
point_ao_split_rendering/: BinaryMessageType.h  BlurPass.cs.slang  CMakeLists.txt  ClientCompositePointAO.ps.slang  ClientMain.cpp  ClientPointHashReceiver.cpp  ClientPointHashReceiver.h  ClientPointRenderer.cpp  ClientPointRenderer.h  ClientScreenSpaceRenderer.cpp  ClientScreenSpaceRenderer.h  CompositeClient.ps.slang  DepthNormals.ps.slang  FLIPScreenshotComparison.h  FinalComposite.ps.slang  FinalCompositePointAO.ps.slang  HashFunctionShared.slang  KDTree.slang  LZ4Compression.cpp  LZ4Compression.h  MeshPointGenerator.cpp  MeshPointGenerator.h  NetworkClient.cpp  NetworkClient.h  NetworkCompressionBase.cpp  NetworkCompressionBase.h  NetworkServer.cpp  NetworkServer.h  OctEncoding.slang  PointAOConstantsShared.slangh  PointAOSamplingUtils.slang  PointCellAllocationStage.cpp  PointCellAllocationStage.cs.slang  PointCellAllocationStage.h  PointCellCreateNetworkBufferStage.cpp  PointCellCreateNetworkBufferStage.cs.slang  PointCellCreateNetworkBufferStage.h  PointCellUpdateStage.cs.slang  PointCloudVisualizationPass.cpp  PointCloudVisualizationPass.h  (+29 more)
poisson_sampling/: cySampleElim.h
test_scenes/: CesiumMan.gltf  CesiumMan2.gltf  CesiumMan3.gltf  CesiumMan4.gltf  CesiumMan5.gltf  arcade_with_animated_things.pyscene  arcade_with_animated_things4.gltf  arcade_with_animated_things_fewer_objects.gltf  arcade_with_animated_things_fewer_objects.pyscene  bunny.pyscene  robot_lab.pyscene  skinned.pyscene  space_scene.pyscene  sponza.pyscene
utils/research_framework/: CMakeLists.txt  Peer.cpp
utils/research_framework/include/split_rendering/research_framework/: Peer.h
utils/samples/: CMakeLists.txt  Flags.h  InProcessStreamingMain.cpp  KeyPress.cpp  KeyPress.h  SimpleClient.cpp  SimpleClient.h  SimpleServer.cpp  SimpleServer.h  WebrtcClientMain.cpp  WebrtcServerMain.cpp
utils/streaming/: InMemoryStreamingApi.h  StreamingApi.h  WebrtcStreamingApi.h
utils/streaming/util/: AtomicQueue.h
utils/streaming/webrtc/: WebrtcHandler.h  WebrtcPeer.h
utils/transport/tcp/: TcpBase.h  TcpClient.h  TcpServer.h  TcpTypes.h
